--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 
 <body>
+  <div id="particles-js"></div>
   <div id="myPlayer" class="cyPlayer">
     <!-- 音乐信息 -->
     <div class="infoPanel">
       <!-- 专辑封面图 -->
       <div class="songImage">
         <div class="imgBg"></div>
-        <img src=""/>
+        <img src="" />
       </div>
       <p class="song"></p>
       <p class="singer"></p>
@@ -25,8 +26,7 @@
     <div class="playerPanel">
       <!-- 隐藏的audio -->
       <audio autoplay="false" hidden>
-        <source src=""> 
-        Oops！当前浏览器不支持audio标签～
+        <source src=""> Oops！当前浏览器不支持audio标签～
       </audio>
       <!-- 进度条 -->
       <div class="progressBox">
@@ -61,9 +61,13 @@
 </body>
 <script src="static/js/jquery-3.3.1.min.js"></script>
 <script src="static/js/cyPlayer.js"></script>
-<script src="static/js/heart.js" async="true"></script>
 <script>
 let myplayer = new cyPlayer(document.getElementById('myPlayer'))
+</script>
+<script src="static/js/heart.js" async="true"></script>
+<script src="static/js/particles.min.js"></script>
+<script>
+particlesJS("particles-js", { "particles": { "number": { "value": 160, "density": { "enable": true, "value_area": 800 } }, "color": { "value": "#ffffff" }, "shape": { "type": "circle", "stroke": { "width": 0, "color": "#000000" }, "polygon": { "nb_sides": 5 }, "image": { "src": "img/github.svg", "width": 100, "height": 100 } }, "opacity": { "value": 1, "random": true, "anim": { "enable": true, "speed": 1, "opacity_min": 0, "sync": false } }, "size": { "value": 3, "random": true, "anim": { "enable": false, "speed": 4, "size_min": 0.3, "sync": false } }, "line_linked": { "enable": true, "distance": 150, "color": "#ffffff", "opacity": 0.4, "width": 1 }, "move": { "enable": true, "speed": 1, "direction": "none", "random": true, "straight": false, "out_mode": "out", "bounce": false, "attract": { "enable": false, "rotateX": 600, "rotateY": 600 } } }, "interactivity": { "detect_on": "canvas", "events": { "onhover": { "enable": true, "mode": "bubble" }, "onclick": { "enable": true, "mode": "repulse" }, "resize": true }, "modes": { "grab": { "distance": 400, "line_linked": { "opacity": 1 } }, "bubble": { "distance": 250, "size": 0, "duration": 2, "opacity": 0, "speed": 3 }, "repulse": { "distance": 400, "duration": 0.4 }, "push": { "particles_nb": 4 }, "remove": { "particles_nb": 2 } } }, "retina_detect": true })
 </script>
 
 </html>
