--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- 播放器 -->
     <div class="playerPanel">
       <!-- 隐藏的audio -->
-      <audio autoplay="false" hidden>
+      <audio preload="auto" autoplay="false" hidden>
         <source src=""> Oops！当前浏览器不支持audio标签～
       </audio>
       <!-- 进度条 -->
